# QnAnalysis

./: .gitignore
setups/: lambda-analysis-config.yml
setups/correlation/: lambda.yml
src/: CMakeLists.txt
src/QnAnalysisDiscriminator/: CMakeLists.txt  Fitter.cpp  Fitter.hpp  GraphExtractor.cpp  GraphExtractor.hpp  NDimFrame.cpp  NDimFrame.hpp  QnAnalysisDiscriminatorLinkDef.h  ShapeContainer.cpp  ShapeContainer.hpp  ShapeContainerTensor.cpp  ShapeContainerTensor.hpp  ShapeFitter.cpp  ShapeFitter.hpp  discriminator.cxx  discriminatortensor.cxx  main.cxx  mcextractor.cxx  mcfitter.cxx  shapetensorwriter.cxx  shapewriter.cxx
src/QnAnalysisDiscriminator/exe/: CMakeLists.txt  discriminator.cxx  discriminatortensor.cxx  mcextractor.cxx  mcfitter.cxx  shapetensorwriter.cxx  shapetensorwriter_fit.cxx
src/tools/: CMakeLists.txt  QVectorQA.cxx
